fix for teg cloud on safari

--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -900,6 +900,7 @@ h3.title_adress
 
 .mdl-card__media.clouds_tag
   position relative
+  flex 1
   width 100%
   height 100%
   background rgba(241,241,241,1)
